--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-    "name": "songs",
-    "version": "1.0.0",
-    "description": "",
-    "type": "module",
-    "scripts": {
-        "test": "jest"
+  "name": "songs",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "scripts": {
+    "test": "jest"
+  },
+  "keywords": [],
+  "author": "annahico",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@babel/preset-env": "^7.24.3",
-        "babel-jest": "^29.7.0",
-        "jest": "^28.1.3"
-    },
-    "jest": {
-        "transform": {
-            "^.+\\.[t|j]sx?$": "babel-jest"
-        }
-    }
+    "testEnvironment": "node"
+  }
 }
